--- a/web/src/components/IDE/IDE.module.css
+++ b/web/src/components/IDE/IDE.module.css
@@ -41,7 +41,7 @@
   position: relative;
   bottom: 0;
 
-  overflow: hidden;
+  overflow-y: hidden;
 
   touch-action: none;
 
@@ -89,7 +89,6 @@
 }
 
 .ide_container {
-  /* grid-area: Editor; */
   background-color: rgb(21, 95, 255);
   width: 60%;
   height: 100% !important;
@@ -99,10 +98,17 @@
 
   position: relative;
   padding-right: 10px;
+}
 
-  overflow: hidden;
+.ide_bottombar{
+  height: 100%;
+  width: auto;
+  position: relative;
+  /* overflow-y: scroll; */
+}
 
-  /* resize: both; */
+.cm-scroller{
+  overflow: auto;
 }
 
 .lang_selection {
@@ -120,12 +126,14 @@
 
 .ide_topbar {
   display: flex;
+  position:relative;
   padding: 0.5%;
   justify-content: space-between;
 }
 
 .ide * {
   font-size: 14px;
+  position: relative;
 }
 
 .output {
