--- a/web/src/components/FileList/FileList.module.css
+++ b/web/src/components/FileList/FileList.module.css
@@ -4,11 +4,14 @@
   flex-direction: column;
   /* grid-template-columns: 1fr; */
 
-  max-height: 100%;
+  /* max-height: 100%; */
   padding: 1.5rem;
   padding-bottom: 1rem;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   overflow-x: hidden;
+
+  flex: 1;
+  overflow-y: auto;
 }
 
 /* .file_status > * {
