--- a/web/src/components/ChatList/ChatList.module.css
+++ b/web/src/components/ChatList/ChatList.module.css
@@ -23,3 +23,21 @@
   background: #cfd0e2;
   border-radius: 0.5rem;
 }
+
+.new_chat {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.new_chat:hover {
+  cursor: pointer;
+}
+
+.new_chat p {
+  margin-left: 1rem;
+}
+
+.new_chat img {
+  max-width: 2.7rem;
+}
