--- a/web/src/components/CreateChatModal/CreateChatModal.module.css
+++ b/web/src/components/CreateChatModal/CreateChatModal.module.css
@@ -14,7 +14,16 @@
   align-items: center;
 }
 
+.backdrop {
+  position: absolute;
+  z-index: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
 .container {
+  position: absolute;
+
   background: linear-gradient(0deg, #5e6084 0%, #5e6084 100%),
     rgba(255, 255, 255, 0.1);
 
@@ -22,10 +31,41 @@
   border-radius: 0.5rem;
 
   width: 30vw;
+  z-index: 1;
 }
 
 .middle {
   margin-top: 0.5rem;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+.shake {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
 }
 
 .middle input {
