--- a/web/src/components/ChattingCard/ChattingCardAI.module.css
+++ b/web/src/components/ChattingCard/ChattingCardAI.module.css
@@ -2,8 +2,15 @@
   display: flex;
   margin-top: 1.5rem;
   /* width: auto; */
-  width: 100%;
+  max-width: 100%;
+  width: fit-content;
   /* margin: 0; */
+
+
+}
+
+.wrapper img {
+  margin-bottom: auto;
 }
 
 .message {
@@ -11,7 +18,7 @@
   background: linear-gradient(0deg, #252525 0%, #252525 100%), #252525;
 
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   /* max-width: 65%;  */
 
@@ -22,6 +29,22 @@
   /* font-weight: .1rem; */
 
   flex: 1;
+  max-width: 90%;
+  /* margin: auto; */
+  /* width: 100%; */
+  /* width: auto; */
+}
+
+.message:first-child {
+  overflow-x: scroll;
+}
+
+.markdown_container {
+  width: 100%;
+}
+
+.code_highlight > * {
+  font-size: 1rem !important;
 }
 
 .preference {
@@ -77,5 +100,7 @@
 }
 
 .markdown {
+  overflow-x: scroll;
 
+  font-size: 1rem;
 }
